# quittance

./: .dockerignore  .gitignore  AUTHENTICATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  Dockerfile  Dockerfile.old  EMAIL_AUTOMATION.md  FIXES_SUMMARY.md  FRONTEND_FIXES.md  README.md  SCI_IMPLEMENTATION.md  fly.toml  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  Cargo.toml  README.md  seed_test_user.sql
backend/.sqlx/: query-01a62a3adc848660e48d820fd263cdeaecd2ce0414b044a62f83d12c8111a245.json  query-067a81200ab6645a2d735de7390236aa96ab3da2c23c1ba06815dfbbc5b8d761.json  query-070fa83863f0a4585df90a6b401d1267ee4a328a208f555a04e5992fb44023fa.json  query-0863fb74ca0ca08a79f6f21b9f2012646e737fa910332146fba006b9d9c618a8.json  query-10215d360abc2147c81c6fac0bb226b1093c5ee7dd2abce8f9713bca7b4b0c0d.json  query-1fae66b1f380dfd00af4b60289aebad592d47b37b9bfcfe8d01f3ddb3384e05f.json  query-20cc878280b39cec3f07768729639e3905413887fa854a9b56bc1609b29f26f5.json  query-24fceaa077c0718bc88c16dffc625331e03e6b245f96e2b7ebfcdcdb99ce4bd1.json  query-297255d8d516765e2f1653bc4287c82d8593dc1af226d6f29e2f42817b00a8db.json  query-2b4394bf0f6e491be1d4f215af96a607f7f8ca3e8cad67a9351da0614645e67f.json  query-2c7d041b27b03add381bf841764c7220d3e5b048e761bbbb27551e69f95fc78f.json  query-324ae6634094f59605a0c0ef49bc77aa109e33b6e2c4b6848ff315eec375c64a.json  query-46f57b52e9841b2e61cecd0230b3305d94d90e0cec3328aeeca880126929953d.json  query-602d7e877a59212ac0ac8588356d9687958ccfc444bde03d7c912e66ea3ab5c2.json  (+21 more)
backend/migrations/: 20260116000000_add_organizations.sql  (+14 more)
(+182 files in other folders)
